<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Handy</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="up_NW">a</string>
    <string name="up_North">b</string>
    <string name="up_NE">c</string>
    <string name="up_East">d</string>
    <string name="up_SE">e</string>
    <string name="up_South">f</string>
    <string name="up_SW">g</string>
    <string name="West">&lt;-</string>
    <string name="down_NW">o</string>
    <string name="down_North">p</string>
    <string name="down_NE">q</string>
    <string name="down_East">r</string>
    <string name="down_SE">s</string>
    <string name="down_South">t</string>
    <string name="down_SW">u</string>
    <string name="right_NW">h</string>
    <string name="right_North">i</string>
    <string name="right_NE">j</string>
    <string name="right_East">k</string>
    <string name="right_SE">l</string>
    <string name="right_South">m</string>
    <string name="right_SW">n</string>
    <string name="left_NW">v</string>
    <string name="left_North">w</string>
    <string name="left_NE">x</string>
    <string name="left_East">y</string>
    <string name="left_SE">z</string>
    <string name="left_South">ques</string>
    <string name="left_SW">.</string>
</resources>
